# notes

./: .gitignore  MEP-Template.md  README.md  _vimrc  array_exp.go  cuda_note.md  go-path.sh  iptables-delete.sh  iptables.sh  master-interface.md  master.md  modern_c++_development_in_vim.md  page-not-exist.txt  polygon_gen.cpp  udf_test.py  vim-config.md  vimrc-lsp
aws/: aws-auto-scaling.md  aws-billing-api.md  aws-billing-with-tag.md  aws-cli.md  aws-create-with-tag.md  aws-go-sdk.md  aws-nat.md  aws-profile.md  aws-vpc-limits.md  billing_tag.go  create_instance.go  describing_instances.go  get_cost_and_usage.go  go.mod  go.sum  instance_tag.go  mongo_exp1.go  profile_exp.go  regions_and_availability.go  run_template.go  terminate_instance.go
bugid-2447301/: bug-report.nvida.txt  switch_test.cpp  switch_test.cu
docker/sshd/ubuntu.1604/: Dockerfile  build.sh
docker/sshd/ubuntu.1804/: Dockerfile  build.sh
docker/ubuntu/: Dockerfile.1604  usage.md
etcd-cluster/: docker-compose.yml  etcd-cluster.md  etcd-cluster.sh  etcd-only.yml  etcd-prometheus.yml  etcd-put.sh  etcd-revision.md  etcd-single.yml  performance.sh  performance.txt  performance_test.md  prometheus.md  put_keys.sh  puts.sh  random_kill.sh
flask-test/: app.py  hello.py
golearn/grpcExp/: go.mod  go.sum  main.go
golearn/grpcExp/proto/: helloworld.pb.go
golearn/grpcExp2/: go.mod  main.go
golearn/grpcExp2/proto/: helloworld.pb.go  helloworld.proto  helloworld_grpc.pb.go
golearn/socks5/: go.mod  readme.md  socks5_proxy.go
hello_cmake/: CMakeLists.txt  hello_cmake.cpp  hello_cmake.h
hello_cmake/tests/: CMakeLists.txt  hello_cmake_test.cpp
hs-stock-history/: test.csv  test.py  沪深300指数历史数据.csv
kubernetes/: create_bridge_network.md  install.md  monolith.yaml  service-monolith.yaml
mep-workflow/: mep-workflow.md
milvus-distributed/: ls-milvus-distributed.sh  memory-leak.md  start-milvus-distributed.sh  stop-milvus-distributed.sh
milvus-recover/: master.md
mysql-ha/: docker-compose.yml  mysql-ha.md
parquet-proj/: .gitignore  CMakeLists.txt  main.cpp
parquet-proj/cmake/Modules/: ConfigureArrow.cmake
parquet-proj/cmake/Templates/: Arrow.CMakeLists.txt.cmake
parquet-proj/test/: CMakeLists.txt  test_hello.cpp
pulsar-manager/: docker-compose.yml  pulsar-manager.md
redis-cluster/: docker-compose.yml  redis.conf  redis.md  start-docker.sh  stop-docker.sh
tidb/: config.md  docker-compose.yml  start-pd.sh  start-tikv.sh  tikv.yml
